# 1214genncudata

./: CLAUDE.md  CMakeLists.txt  README.md  USAGE.md  allkernels.json  allkernels.json.A100  allkernels.json.RTX3090  allkernels.json.RTX4090  allkernels.json.V100  extract_ncu_metrics.py  generate_dataset.py  genkernel.py  profile.sh  run.sh  run_pipeline.py  setup_gpu.sh
template/: common.h  demo.cu  main.cpp
